--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,10 +25,10 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- container {
+ .container {
    width: 450px; 
    align-content: center; 
    background: white;
-   
- 
+   margin: 0 auto; 
+
 }
