add a negative margin top to container

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -29,6 +29,8 @@ body {
    width: 450px; 
    align-content: center; 
    background: white;
+   top: 40px; 
    margin: 0 auto; 
+   margin-top: -16px;
 
 }
