--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -85,6 +85,7 @@ body {
 
 .border{
   border-top: solid gainsboro;  
+  display: flex; 
 }
 
 .headerheight{
@@ -103,4 +104,5 @@ margin-left: 30px;
 
 .nomargin{
   margin: 0px; 
+  margin-right: 51%;
 }
