--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -109,7 +109,7 @@ margin-left: 30px;
 .textarea{
 display: flex; 
 width: 99%;
-margin-bottom: 9% 
+margin-bottom: 9%; 
 }
 
 .hiddenError{
@@ -118,4 +118,12 @@ margin-bottom: 9%
 
 .hiddenIcons{
   display: none; 
+}
+
+.left-margin{
+  margin-left: auto; 
+  margin-right: 6px; 
+}
+.display-flex{
+  display: flex; 
 }
